2006-05-17 [wwp]	2.2.0cvs25

	* src/plugins/demo/demo.c
		updated product name in plugin demo (many plugins need to be
		sync'ed w/ that change).

2006-05-17 [colin]	2.2.0cvs24

	* src/mh.c
		Fix leak

2006-05-16 [colin]	2.2.0cvs23

	* src/mainwindow.c
		Stupid me hit again. Fix cvs22.

2006-05-16 [colin]	2.2.0cvs22

	* src/mainwindow.c
		Fix bug #922 (sylpheed-claws crashed after 
		pushing on Inbox folder)

2006-05-16 [colin]	2.2.0cvs21

	* src/compose.c
		Make From header be copy/paste/select-able

2006-05-16 [wwp]	2.2.0cvs20

	* src/export.c
	* src/matcher.c
	* src/summaryview.c
	* src/etpan/imap-thread.c
		fix some compiler warnings (thanks to Colin).

2006-05-16 [wwp]	2.2.0cvs19

	* src/action.c
	* src/gedit-print.c
	* src/inc.c
	* src/mainwindow.c
	* src/mh.c
	* src/statusbar.c
	* src/send_message.c
	* src/summaryview.c
		get rid of some gtk warning/errors at runtime (and avoid divide-by-0).

2006-05-15 [colin]	2.2.0cvs18

	* src/procmsg.c
		Fix automatic rule creation with List-Post

2006-05-15 [paul]	2.2.0cvs17

	* tools/filter_conv_new.pl
		updated for rule enabling/disabling
		claws version >= 2.3.x required

2006-05-15 [cleroy]	2.2.0cvs16

	* src/main.c
		Revert test

2006-05-15 [cleroy]	2.2.0cvs15

	* src/main.c
		test

2006-05-15 [wwp]	2.2.0cvs14

	* manual/pl/.cvsignore
		ignore generated files.

2006-05-14 [wwp]	2.3.0-rc1

	* 2.3.0-rc1 released

2006-05-13 [wwp]	2.2.0cvs13

	* src/filtering.c
	* src/filtering.h
	* src/matcher.c
	* src/matcher_parser_lex.l
	* src/matcher_parser_parse.y
	* src/prefs_filtering.c
		new feature: provide the ability to disable filtering and processing
		rules. Patch by Fabien Vantard <fzzzzz@gmail.com>, w/ some minor
		adaptations.

2006-05-13 [colin]	2.2.0cvs12

	* src/compose.c
		Remove useless if (a) b; else b;
		Thanks to wwp

2006-05-13 [wwp]	2.2.0cvs11

	* src/export.c
	* src/import.c
	* src/mainwindow.c
	* src/mbox.c
	* src/summaryview.c
	* src/summaryview.h