@@ -1495,3 +1495,4 @@
 ( cvs diff -u -r 1.274.2.112 -r 1.274.2.114 src/mainwindow.c;  ) > 2.2.0cvs23.patchset
 ( cvs diff -u -r 1.79.2.26 -r 1.79.2.27 src/mh.c;  ) > 2.2.0cvs24.patchset
 ( cvs diff -u -r 1.13.2.6 -r 1.13.2.7 src/plugins/demo/demo.c;  ) > 2.2.0cvs25.patchset
+( cvs diff -u -r 1.274.2.114 -r 1.274.2.115 src/mainwindow.c;  ) > 2.2.0cvs26.patchset
