@@ -1,3 +1,8 @@
+2006-05-17 [wwp]	2.2.0cvs26
+
+	* src/mainwindow.c
+		fix useless and potentially dangerous buffer walking (thanks to Colin).
+
 2006-05-17 [wwp]	2.2.0cvs25
 
 	* src/plugins/demo/demo.c
